# buaa_compiler_2nd

./: CMakeLists.txt  config.json  main.cpp
src/: ast.hpp  file.hpp  grammar.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp  util.hpp  visitor.cpp  visitor.hpp
src/backend/mips/: mips_instruction.hpp  mips_operand.cpp  mips_operand.hpp
src/ir/: instruction.cpp  instruction.hpp  mod.hpp  module.hpp  type.cpp  type.hpp  value.cpp  value.hpp
