cmake_minimum_required(VERSION 3.10.0)

project(Compiler VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(Compiler main.cpp
    src/grammar.cpp
    src/parser.cpp
    src/lexer.cpp
    src/visitor.cpp
    src/ir/type.cpp
    src/ir/value.cpp
    src/ir/instruction.cpp
)



include(CTest)
enable_testing()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)



set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
